--- a/CatalystRepository/static/css/main.css
+++ b/CatalystRepository/static/css/main.css
@@ -119,3 +119,25 @@
   font-weight: bold;
   font-size: xx-large;
 }
+
+
+#articlelink a:link  {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+#articlelink a:visited {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+#articlelink a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+#articlelink a:active {
+  color: rgb(255, 196, 0);
+  background-color: transparent;
+  text-decoration: underline;
+}
