--- a/CatalystRepository/static/css/table.css
+++ b/CatalystRepository/static/css/table.css
@@ -2,12 +2,6 @@
 
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
-
-
-@font-face {
-    font-family: OpenSans-Regular;
-  }
-  
   
   
   /*//////////////////////////////////////////////////////////////////
@@ -241,7 +235,7 @@
       padding: 37px 0;
     }
     table tbody tr td {
-      padding-left: 40% !important;
+      padding-left: 20% !important;
       margin-bottom: 24px;
     }
     table tbody tr td:last-child {
@@ -249,14 +243,16 @@
     }
     table tbody tr td:before {
       font-family: OpenSans-Regular;
-      font-size: 14px;
-      color: #999999;
+      font-size: 30px;
+      color: #000000;
       line-height: 1.2;
       font-weight: unset;
       position: absolute;
-      width: 40%;
+      width: 10%;
       left: 30px;
       top: 0;
+      padding-top: 0.75rem;
+      padding-bottom: 0.75rem;
     }
     table tbody tr td:nth-child(1):before {
       content: "Ticker";
@@ -294,7 +290,7 @@
     }
   
     tbody tr {
-      font-size: 14px;
+      font-size: 30px;
     }
   }
   
